# neuroguard-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DISCLAIMER.md  index.html
examples/: encrypted_neural_processing.py  privacy_score_demo.py
legal/: TERMS_OF_USE.md
neuroguard/: __init__.py  api_keys.py  client.py  plans.py  privacy_score.py  security.py  settings.py  subscriptions.py  tenants.py  usage_meter.py  vault.py
neuroguard/api/: __init__.py  __main__.py  app.py  auth.py  evidence_bundle.py  pdf_report.py  settings_routes.py  vault_routes.py
neuroguard/audit/: __init__.py  log.py  logger.py
neuroguard/consent/: __init__.py  ledger.py  manager.py  store.py
neuroguard/db/: neuroguard.db  schema.py
neuroguard/encryption/: __init__.py  engine.py
neuroguard/lineage/: __init__.py  models.py  tracker.py
neuroguard/vault/: __init__.py  backend.py  in_memory.py  vault.py
tests/: __init__.py  test_api.py  test_api_evidence_bundle.py  test_api_keys.py  test_api_pdf_report.py  test_audit.py  test_client.py  test_consent.py  test_consent_ledger.py  test_encryption.py  test_plans.py  test_privacy_score.py  test_subscriptions.py  test_tenants.py  test_usage_meter.py  test_vault.py  test_vault_backend.py
