[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroguard"
version = "0.1.0"
description = "Privacy infrastructure library for protecting neural and biometric data on-device"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "NeuroGuard" }]
keywords = ["privacy", "neural", "biometric", "encryption", "consent", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=42.0.0",
    "fastapi>=0.109.0",
    "httpx>=0.26.0",
    "uvicorn[standard]>=0.27.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "httpx>=0.26.0",
]

[project.scripts]
neuroguard-api = "neuroguard.api.app:main"

[project.urls]
Repository = "https://github.com/neuroguard/neuroguard-sdk"

[tool.setuptools.packages.find]
where = ["."]
include = ["neuroguard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
